--- a/package.json
+++ b/package.json
@@ -10,18 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/clipboard": "^1.2.3",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/picker": "^1.6.5",
-    "@react-native-community/toolbar-android": "0.1.0-rc.2",
-    "@react-native-firebase/analytics": "^7.6.1",
-    "@react-native-firebase/app": "^8.4.1",
-    "@react-native-firebase/messaging": "^7.8.4",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/core": "^5.12.3",
-    "@react-navigation/material-top-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
@@ -34,20 +28,9 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-animatable": "^1.3.3",
-    "react-native-app-intro-slider": "^4.0.4",
-    "react-native-calendars": "^1.301.0",
-    "react-native-date-picker": "^3.2.2",
-    "react-native-datepicker": "^1.7.2",
-    "react-native-divider": "^1.0.3",
     "react-native-document-picker": "^3.5.4",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-get-location": "^1.4.3",
-    "react-native-google-places-autocomplete": "^1.8.0",
-    "react-native-image-base64": "^0.1.4",
-    "react-native-image-crop-picker": "^0.33.4",
-    "react-native-ionicons": "^4.6.5",
-    "react-native-maps": "0.27.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.1.0",
     "react-native-progress": "^4.1.2",
@@ -57,16 +40,13 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-simple-time-picker": "^0.2.0",
-    "react-native-simple-toast": "^1.1.2",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-navigation": "^4.4.0",
     "react-navigation-animated-switch": "^0.6.0",
     "react-navigation-stack": "^2.8.2",
-    "react-redux": "^7.2.1",
     "react-time-picker": "^4.0.1",
-    "redux-saga": "^1.1.3",
     "util": "^0.12.3"
   },
   "devDependencies": {
