--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,4 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+RNGP_ANDROID_API_KEY=AIzaSyASyQUwyWgtoghIZ6KUZ9dUR5UdflAS3ik
