--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/clipboard": "^1.2.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.5",
@@ -32,6 +33,7 @@
     "react-native-document-picker": "^3.5.4",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-google-places": "^3.1.2",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.1.0",
     "react-native-progress": "^4.1.2",
