--- a/ios/Ryder.xcodeproj/xcshareddata/xcschemes/Ryder.xcscheme
+++ b/ios/Ryder.xcodeproj/xcshareddata/xcschemes/Ryder.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "UDrive.app"
-               BlueprintName = "UDrive"
-               ReferencedContainer = "container:UDrive.xcodeproj">
+               BuildableName = "Ryder.app"
+               BlueprintName = "Ryder"
+               ReferencedContainer = "container:Ryder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "UDriveTests.xctest"
-               BlueprintName = "UDriveTests"
-               ReferencedContainer = "container:UDrive.xcodeproj">
+               BuildableName = "RyderTests.xctest"
+               BlueprintName = "RyderTests"
+               ReferencedContainer = "container:Ryder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "UDrive.app"
-            BlueprintName = "UDrive"
-            ReferencedContainer = "container:UDrive.xcodeproj">
+            BuildableName = "Ryder.app"
+            BlueprintName = "Ryder"
+            ReferencedContainer = "container:Ryder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "UDrive.app"
-            BlueprintName = "UDrive"
-            ReferencedContainer = "container:UDrive.xcodeproj">
+            BuildableName = "Ryder.app"
+            BlueprintName = "Ryder"
+            ReferencedContainer = "container:Ryder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
