--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.21.1",
     "i": "^0.3.6",
     "jetifier": "^1.6.6",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.27.0",
     "native-base": "^2.15.0",
     "npm": "^6.14.8",
@@ -38,6 +39,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-location": "^2.0.0",
     "react-native-google-places": "^3.1.2",
+    "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-image-picker": "^1.1.0",
     "react-native-maps": "^0.27.1",
     "react-native-material-textfield": "^0.16.1",
