--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-simple-time-picker": "^0.2.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.1.0-alpha8",
