--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-animated-loader": "^0.0.9",
     "react-native-date-picker": "^3.2.5",
     "react-native-document-picker": "^3.5.4",
     "react-native-fs": "^2.16.6",
@@ -45,6 +46,7 @@
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.1.0",
     "react-native-progress": "^4.1.2",
+    "react-native-progress-dialog": "^0.0.5",
     "react-native-reanimated": "^1.13.0",
     "react-native-rename": "^2.6.0",
     "react-native-responsive-fontsize": "^0.4.3",
