--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-animated-loader": "^0.0.9",
     "react-native-date-picker": "^3.2.5",
     "react-native-document-picker": "^3.5.4",
+    "react-native-elements": "^3.3.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-location": "^2.0.0",
@@ -60,7 +61,7 @@
     "react-native-simple-time-picker": "^0.2.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-tab-view": "^2.15.1",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-navigation": "^4.4.0",
     "react-navigation-animated-switch": "^0.6.0",
