--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "patch-package": "^6.2.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "^0.64.1",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-loader": "^0.0.9",
     "react-native-date-picker": "^3.2.5",
@@ -60,7 +60,7 @@
     "react-native-simple-time-picker": "^0.2.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-tab-view": "^2.15.1",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-navigation": "^4.4.0",
     "react-navigation-animated-switch": "^0.6.0",
